--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link smooth" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link smooth" href="#experience">Experience</a>
+                <a class="nav-link smooth" href="#experience">Work Experience</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link smooth" href="#skills">Skills</a>
@@ -83,7 +83,7 @@
                             <a class="nav-link smooth" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link smooth" href="#experience">Experience</a>
+                            <a class="nav-link smooth" href="#experience"> Work Experience</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link smooth" href="#skills">Skills</a>
