--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                     href="https://www.linkedin.com/company/peak-power-consultancy-pvt-ltd/"
                                     target="_blank">Peak Power Consultancy</a>
                             </h3>
-                            <p class="date">July 2022 - June 2023 Thane</p>
+                            <p class="date">July 2022 - June 2023 Thane, Maharashtra</p>
 
                         </div>
                         <ul>
