--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     <h4>Frameworks</h4>
                     <div class="skill-item" data-filter="frameworks">Flask & Django</div>
                     <div class="skill-item" data-filter="frameworks">Node.js & Bootstrap</div>
-                    <div class="skill-item" data-filter="frameworks">Heroku</div>
+                    <div class="skill-item" data-filter="frameworks">Heroku & Streamlit</div>
                     <div class="skill-item" data-filter="frameworks">Docker</div>
                     <div class="skill-item" data-filter="frameworks">Selenium</div>
                     <div class="skill-item" data-filter="frameworks">Scrapy</div>
