--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="skill-item" data-filter="languages">C/C++</div>
                     <div class="skill-item" data-filter="languages">PowerShell & Bash scripting</div>
                     <div class="skill-item" data-filter="languages">HTML, CSS & JS, PHP</div>
-                    <div class="skill-item" data-filter="languages">MySQL, PostgreSQL, MongoDB</div>
+                    <div class="skill-item" data-filter="languages">MySQL, MongoDB</div>
                     <div class="skill-item" data-filter="languages">React</div>
                     <div class="skill-item" data-filter="languages">Kotlin</div>
                 </div>
@@ -366,11 +366,11 @@
                     <div class="skill-item" data-filter="libraries">NumPy, Pandas, Matplotlib,
                         Seaborn, Plotly</div>
                     <div class="skill-item" data-filter="libraries">Scikit-learn, TensorFlow, Keras
-                        PyTorch</div>
+                        NLP</div>
                     <div class="skill-item" data-filter="libraries">OpenCV, Pillow</div>
-                    <div class="skill-item" data-filter="libraries">Requests</div>
-                    <div class="skill-item" data-filter="libraries">Beautiful Soup</div>
-                    <div class="skill-item" data-filter="libraries">pygame</div>
+                    <div class="skill-item" data-filter="libraries">Requests, Sockets, Pickle</div>
+                    <div class="skill-item" data-filter="libraries">Beautiful Soup,Tkinter</div>
+                    <div class="skill-item" data-filter="libraries">pygame, keyboard</div>
                     <div class="skill-item" data-filter="libraries">sqllite</div>
                 </div>
 
@@ -378,9 +378,9 @@
                 <div class="col-md-4 skill-category" data-category="frameworks">
                     <h4>Frameworks</h4>
                     <div class="skill-item" data-filter="frameworks">Flask & Django</div>
-                    <div class="skill-item" data-filter="frameworks">Node.js & Bootstrap</div>
-                    <div class="skill-item" data-filter="frameworks">Heroku & Streamlit</div>
-                    <div class="skill-item" data-filter="frameworks">Docker</div>
+                    <div class="skill-item" data-filter="frameworks">Node.js, NPM & Bootstrap</div>
+                    <div class="skill-item" data-filter="frameworks">Heroku & Docker</div>
+                    <div class="skill-item" data-filter="frameworks">Streamlit</div>
                     <div class="skill-item" data-filter="frameworks">Selenium</div>
                     <div class="skill-item" data-filter="frameworks">Scrapy</div>
                     <div class="skill-item" data-filter="frameworks">Postman</div>
