--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
                     <div class="skill-item" data-filter="libraries">NumPy, Pandas, Matplotlib,
                         Seaborn, Plotly</div>
                     <div class="skill-item" data-filter="libraries">Scikit-learn, TensorFlow, Keras
-                        NLP</div>
+                        NLTK</div>
                     <div class="skill-item" data-filter="libraries">OpenCV, Pillow</div>
                     <div class="skill-item" data-filter="libraries">Requests, Sockets, Pickle</div>
-                    <div class="skill-item" data-filter="libraries">Beautiful Soup,Tkinter</div>
+                    <div class="skill-item" data-filter="libraries">Beautiful Soup,Tkinter, pycrypto </div>
                     <div class="skill-item" data-filter="libraries">pygame, keyboard</div>
-                    <div class="skill-item" data-filter="libraries">sqllite</div>
+                    <div class="skill-item" data-filter="libraries">sqllite, OS, subprocess</div>
                 </div>
 
                 <!-- Framework Skills -->
