--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="col-md-4 skill-category" data-category="frameworks">
                     <h4>Frameworks</h4>
                     <div class="skill-item" data-filter="frameworks">Flask & Django</div>
-                    <div class="skill-item" data-filter="frameworks">Node.js, NPM & Bootstrap</div>
+                    <div class="skill-item" data-filter="frameworks">Node.js, React, Express & Bootstrap</div>
                     <div class="skill-item" data-filter="frameworks">Heroku & Docker</div>
                     <div class="skill-item" data-filter="frameworks">Streamlit</div>
                     <div class="skill-item" data-filter="frameworks">Selenium</div>
