--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
               <div>
                 <article class="item-card">
                   <div class="item-title">Vice President of Public Relations</div>
-                  <div class="item-meta">Graduate Student Council, UNH · Sep 2024 - Present</div>
+                  <div class="item-meta">Graduate Student Council, UNH · Sep 2024 - Jun 2025</div>
                   <ul class="item-list">
                     <li><strong>Creative Marketing:</strong> Designing flyers and branding materials for campus events.</li>
                     <li><strong>Social Media:</strong> Managing accounts to ensure consistent engagement and presence.</li>
@@ -2100,4 +2100,5 @@
     })();
   </script>
 </body>
+
 </html>
