--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,7 @@
               <section class="stack-section">
                 <div class="stack-title">Experience &amp; leadership</div>
 
+                <!-- 1) Most recent: Graduate Research Assistant -->
                 <article class="item-card">
                   <div class="item-title">Graduate Research Assistant</div>
                   <div class="item-meta">
@@ -1069,6 +1070,32 @@
                   </ul>
                 </article>
 
+                <!-- 2) Next: Graduate leadership, student engagement, and support roles -->
+                <article class="item-card">
+                  <div class="item-title">Graduate leadership, student engagement, and support roles</div>
+                  <div class="item-meta">
+                    University of New Haven · 2023 to 2025
+                  </div>
+                  <p class="item-description">
+                    Combined technical work with leadership and service roles that strengthened my communication, documentation, and community building skills.
+                  </p>
+                  <ul class="item-list">
+                    <li>
+                      Served as Vice President of Public Relations for the Graduate Student Council, leading creative marketing, branding, social media, and event documentation for graduate students.
+                    </li>
+                    <li>
+                      Worked as a Campus Connector and Orientation Support staff with the Office of Graduate and International Student Life, helping incoming students with onboarding, campus tours, and resource navigation.
+                    </li>
+                    <li>
+                      Supported the Office of Graduate Admissions as a Graduate Assistant, securing time sensitive application workflows in Slate, verifying academic records, and applying access control and data integrity best practices.
+                    </li>
+                    <li>
+                      Led community outreach for the Indian Student Council and volunteered as an event photographer, supporting large cultural events such as Diwali and helping create a welcoming campus experience.
+                    </li>
+                  </ul>
+                </article>
+
+                <!-- 3) Cybersecurity and IoT Engineer, Intern -->
                 <article class="item-card">
                   <div class="item-title">Cybersecurity and IoT Engineer, Intern</div>
                   <div class="item-meta">
@@ -1096,26 +1123,38 @@
                   </ul>
                 </article>
 
+                <!-- 4) Undergraduate Student Researcher -->
                 <article class="item-card">
-                  <div class="item-title">Graduate leadership, student engagement, and support roles</div>
+                  <div class="item-title">Undergraduate Student Researcher</div>
                   <div class="item-meta">
-                    University of New Haven · 2023 to 2025
+                    St. Francis Institute of Technology · Part-time · May 2022 to Oct 2022 · Mumbai, Maharashtra, India · On-site
                   </div>
                   <p class="item-description">
-                    Combined technical work with leadership and service roles that strengthened my communication, documentation, and community building skills.
+                    Undergraduate research role focused on applying machine learning and blockchain
+                    to cyber physical power systems and secure energy trading, resulting in three
+                    IEEE indexed publications at the 2022 Global Energy Conference (GEC) in Batman, Turkey.
                   </p>
                   <ul class="item-list">
                     <li>
-                      Served as Vice President of Public Relations for the Graduate Student Council, leading creative marketing, branding, social media, and event documentation for graduate students.
+                      Co-designed and implemented a machine learning based intrusion detection system
+                      for a cyber physical power system using decision trees to detect multiple cyber
+                      attack types, evaluated with accuracy, precision, recall, and F1 score.
                     </li>
                     <li>
-                      Worked as a Campus Connector and Orientation Support staff with the Office of Graduate and International Student Life, helping incoming students with onboarding, campus tours, and resource navigation.
+                      Developed a transformer oil temperature monitoring model from load and operating
+                      data, benchmarking kNN, random forest, SVM, and logistic regression and showing
+                      kNN as the best classifier for low vs high oil temperature.
                     </li>
                     <li>
-                      Supported the Office of Graduate Admissions as a Graduate Assistant, securing time sensitive application workflows in Slate, verifying academic records, and applying access control and data integrity best practices.
+                      Contributed to the design and simulation of a PBFT style blockchain framework
+                      to secure Vehicle to Grid (V2G) energy trading, focusing on transaction integrity,
+                      confidentiality, and privacy.
                     </li>
                     <li>
-                      Led community outreach for the Indian Student Council and volunteered as an event photographer, supporting large cultural events such as Diwali and helping create a welcoming campus experience.
+                      Owned end to end research workflows including literature review, model and system
+                      design, dataset preparation, coding and simulation, experiment analysis, and
+                      writing camera ready manuscripts accepted and published on IEEE Xplore under
+                      author profile “A. Vedant.”
                     </li>
                   </ul>
                 </article>
@@ -1345,7 +1384,7 @@
     </div>
   </article>
 </section>
-</section>
+        </section>
 
 
         <section id="projects" class="tab-section">
@@ -1875,43 +1914,7 @@
                 <div class="item-title">Jigsaw Phishing Quiz</div>
                 <div class="item-meta">Google Jigsaw · 2025</div>
                 <p class="item-description">
-                  Achieved a perfect score of <strong>10/10</strong> in Google Jigsaw's advanced phishing quiz, demonstrating sharp skills in identifying sophisticated social engineering attacks.
-                </p>
-                <div class="badge-row">
-                  <span class="badge primary">Phishing</span>
-                  <span class="badge">Social Engineering</span>
-                  <span class="badge">Awareness</span>
-                </div>
-              </article>
-            </div>
-          </section>
-
-          <section class="stack-section">
-            <div class="stack-title">Honors & Awards</div>
-            <div class="split-grid">
-              <article class="item-card">
-                <div class="item-title">Distinguished Service Award</div>
-                <div class="item-meta">Office of Graduate & International Student Life, UNH · Apr 2025</div>
-                <p class="item-description">
-                  Awarded for sustained contributions to the graduate student community. Recognized for
-                  leadership in supporting peers, organizing initiatives, and serving as a reliable
-                  mentor and resource for incoming students.
-                </p>
-              </article>
-
-              <article class="item-card">
-                <div class="item-title">1st Place, Research Excellence (Regional)</div>
-                <div class="item-meta">IEI NMLC FCRIT Excellence Awards · Jun 2023</div>
-                <p class="item-description">
-                  Awarded first place in the Undergraduate Student Regional category for research work.
-                  This achievement recognized the successful publication of three IEEE conference papers
-                  and significant contributions to engineering research projects.
-                </p>
-              </article>
-            </div>
-          </section>
-
-          <section class="stack-section">
+                  Achieved a perfect score of <strong>10/10</strong> in Google Jigsaw's advanced phishing quiz, demonstrating sharp skills
             <div class="stack-title">Volunteering & Leadership</div>
             <div class="two-column">
               <div>
