--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,38 @@
                   </ul>
                 </article>
 
-                <!-- 2) Next: Graduate leadership, student engagement, and support roles -->
+                <!-- 2) Cisco SOC Analyst -->
+                <article class="item-card">
+                  <div class="item-title">SOC Analyst</div>
+                  <div class="item-meta">
+                    Cisco · Oct 2024 to May 2025 · Connecticut, United States 
+                  </div>
+                  <p class="item-description">
+                    Supported 24x7 SOC operations across enterprise network, endpoint, cloud, and data-access environments, moving fast from alert triage to containment and clean handoffs.
+                  </p>
+                  <ul class="item-list">
+                    <li>
+                      Supported 24x7 SOC operations by monitoring enterprise network, endpoint, cloud, and data-access security events, reviewing 1,000+ alerts weekly based on SLA and risk.
+                    </li>
+                    <li>
+                      Investigated phishing, malware, unauthorized access, abnormal network activity, and data exposure using Splunk SIEM, Cisco XDR, EDR, firewall, and DNS/proxy logs.
+                    </li>
+                    <li>
+                      Performed incident response actions including endpoint isolation, Active Directory account containment, and malicious IP/domain blocking.
+                    </li>
+                    <li>
+                      Documented investigations with timelines, root cause analysis, impacted assets, and remediation steps for cross-team collaboration.
+                    </li>
+                    <li>
+                      Tuned EDR and antivirus detection logic to reduce false positives by 30%.
+                    </li>
+                    <li>
+                      Built Python and PowerShell automation for alert enrichment and log collection.
+                    </li>
+                  </ul>
+                </article>
+
+                <!-- 3) Next: Graduate leadership, student engagement, and support roles -->
                 <article class="item-card">
                   <div class="item-title">Graduate leadership, student engagement, and support roles</div>
                   <div class="item-meta">
@@ -1095,35 +1126,50 @@
                   </ul>
                 </article>
 
-                <!-- 3) Cybersecurity and IoT Engineer, Intern -->
+                <!-- 4) Peak Power Cyber Security Analyst -->
                 <article class="item-card">
-                  <div class="item-title">Cybersecurity and IoT Engineer, Intern</div>
+                  <div class="item-title">Cyber Security Analyst </div>
                   <div class="item-meta">
-                    Peak Power Consultancy Pvt Ltd · Jul 2022 to Jun 2023 · Thane, India 
+                    Peak Power Inc · Jun 2022 to Jun 2023 · Thane, Maharashtra, India · On-site
                   </div>
                   <p class="item-description">
-                    Worked on an end to end EV monitoring stack that combined embedded hardware, web development, cloud services, and security controls for real time power system monitoring.
+                    Blended SOC-style monitoring with IoT security engineering on an end-to-end EV monitoring stack, spanning ESP32 telemetry, Flask services, MQTT, and AWS.
                   </p>
                   <ul class="item-list">
                     <li>
-                      Designed a custom power metering and fault detection circuit around an ESP32 using CAN to track voltage, current, temperature, and fault states.
+                      Monitored and triaged 1,200+ daily alerts across endpoint, network, cloud, identity, and data-access environments using Cisco XDR and Splunk SIEM.
                     </li>
                     <li>
-                      Built and secured a Flask based dashboard and API for live EV telemetry using input validation, authentication checks, and safe session handling so it could be used as an internal engineering tool.
+                      Investigated phishing, malware, credential misuse, lateral movement, and abnormal data access by correlating firewall, IDS/IPS, EDR, Active Directory, DNS, and cloud logs.
                     </li>
                     <li>
-                      Implemented an LSTM based battery health model and exposed it via a secure Flask API with basic anomaly checks and alerts for remote monitoring.
+                      Conducted data-centric incident investigations to identify potential data exposure and insider risk indicators, and documented timelines, impacted assets, and remediation steps.
                     </li>
                     <li>
-                      Hardened an MQTT and AWS pipeline with TLS, certificate based device identity, and least privilege IAM roles for topics, storage, and APIs so live and historical data could be accessed without exposing raw endpoints.
+                      Executed containment actions including endpoint isolation, account disabling, IP/domain blocking, and access control enforcement.
                     </li>
                     <li>
-                      Acted as security owner using Nmap, OpenSSL, Burp Suite, and Snort to review services, test for common web vulnerabilities, and define simple runbooks for login failures, unusual IP ranges, and traffic spikes.
+                      Performed proactive threat hunting aligned with MITRE ATT&amp;CK techniques and supported vulnerability management and compliance by validating critical findings and coordinating remediation.
+                    </li>
+                    <li>
+                      Designed an ESP32-based power metering and fault detection circuit using CAN to track voltage, current, temperature, and fault states for EV telemetry.
+                    </li>
+                    <li>
+                      Built and secured a Flask dashboard and API for live EV telemetry using input validation, authentication checks, and safe session handling for internal engineering use.
+                    </li>
+                    <li>
+                      Implemented an LSTM-based battery health model and exposed it via a secure Flask API with anomaly checks and alerts for remote monitoring.
+                    </li>
+                    <li>
+                      Hardened an MQTT and AWS pipeline with TLS, certificate-based device identity, and least-privilege IAM roles for topics, storage, and APIs.
+                    </li>
+                    <li>
+                      Acted as security owner using Nmap, OpenSSL, Burp Suite, and Snort to review services, test for common web vulnerabilities, and define runbooks for login failures, unusual IP ranges, and traffic spikes.
                     </li>
                   </ul>
                 </article>
 
-                <!-- 4) Undergraduate Student Researcher -->
+                <!-- 5) Undergraduate Student Researcher -->
                 <article class="item-card">
                   <div class="item-title">Undergraduate Student Researcher</div>
                   <div class="item-meta">
