--- a/index.html
+++ b/index.html
@@ -1446,6 +1446,36 @@
 
           <div class="grid-3">
             <article class="project-card">
+              <div class="project-tagline">Red Team Automation</div>
+              <div class="project-title">RashTitan Pentest Suite</div>
+              <p class="project-description">
+                Automated red team and wireless auditing framework for Raspberry Pi and Kali Linux.
+                A single ncurses-style menu that orchestrates recon, web auditing, exploitation lookups,
+                MITM workflows, and structured report generation.
+              </p>
+            
+              <div class="badge-row">
+                <span class="badge primary">Bash</span>
+                <span class="badge">Raspberry Pi</span>
+                <span class="badge">Kali Linux</span>
+                <span class="badge">Nmap</span>
+                <span class="badge">Wifite</span>
+                <span class="badge">Bettercap</span>
+                <span class="badge">Searchsploit</span>
+              </div>
+            
+              <a
+                class="project-link"
+                href="https://github.com/anishvedant/RashTitan-Pentest-Suite"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                See Project
+                <span class="arrow">↗</span>
+              </a>
+            </article>
+
+            <article class="project-card">
               <div class="project-tagline">Network Security</div>
               <div class="project-title">WireGuard VPN Setup on Raspberry Pi 5</div>
               <p class="project-description">
@@ -2162,3 +2192,4 @@
   </script>
 </body>
 </html>
+
